// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> component should contain <DefaultButton />'s componentId 1`] = `
<DocumentFragment>
  <button
    class="sc-bcPKhP sc-grXZZQ cbtdGf fkLpdX"
  />
</DocumentFragment>
`;

exports[`<Button/> component should contain <GoogleButton />'s componentId 1`] = `
<DocumentFragment>
  <button
    class="sc-bcPKhP sc-hLclGa cbtdGf loojds"
  />
</DocumentFragment>
`;

exports[`<Button/> component should contain <InvertedButton />'s componentId 1`] = `
<DocumentFragment>
  <button
    class="sc-bcPKhP sc-dkjKgF cbtdGf kNOHCT"
  />
</DocumentFragment>
`;
